Fix updateHdr width on firefox; general positioning in FF
git-svn-id: file:///home/svn/AFV2006@2795 1e6d2d28-e1fb-0310-b8ab-81908d8c6b6a

--- a/static/css/legacy/main_ff.css
+++ b/static/css/legacy/main_ff.css
@@ -95,6 +95,7 @@ div#main {
 	top: 96px;
 	bottom: 1px;
 	left: 160px;
+	right: 1px;
 	margin-left: 1px;
 	margin-right: 2px;
 }
@@ -105,7 +106,8 @@ div#main {
 	font-weight: bold;
 	font-size: 10pt;
 	background-color: #0B228C;
-	width: 800px;
+	width: 100%;
+	padding: 2px;
 	color: #ffffff;
 	text-transform: uppercase;
 }
